# sysstat

./: .gitignore  .lgtm.yml  .travis.yml  BUG_REPORT  CHANGES  CREDITS  FAQ  FAQ.md  Makefile.in  README  README.md  TODO  activity.c  cgroupstat.c  cifsiostat.c  cifsiostat.h  common.c  common.h  configure  configure.ac  configure.in  count.c  count.h  do_test  format.c  iconfig  ioconf.c  ioconf.h  iostat.c  iostat.h  json_stats.c  json_stats.h  mpstat.c  mpstat.h  nfsiostat-sysstat.c  nfsiostat-sysstat.h  nfsiostat.c  nfsiostat.h  pcp_def_metrics.c  pcp_def_metrics.h  (+302 more)
.github/: FUNDING.yml
.github/workflows/: codeql.yml
contrib/irqstat/: LICENSE  README.md  irqstat  pylint.rc
contrib/irqtop/: irqtop
contrib/isag/: README-isag  isag  isag.1  isag.in
contrib/sargraph/: sargraph  sargraph2
cron/: crontab.sample  sysstat-collect.service.in  sysstat-collect.timer.in  sysstat-rotate.service  sysstat-rotate.service.in  sysstat-rotate.timer  sysstat-rotate.timer.in  sysstat-summary.service.in  sysstat-summary.timer.in  sysstat.cron.daily.in  sysstat.cron.hourly.in  sysstat.crond.in  sysstat.sleep.in
man/: cifsiostat.1  cifsiostat.in  iostat.in  mpstat.1  nfsiostat-sysstat.in  nfsiostat.1  nfsiostat.in  pidstat.1  sa1.in  sa2.in  sadc.in  sadf.in  sar.in  sysstat.in  tapestat.1
nls/: README-nls  af.po  be.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ky.po  lv.po  mt.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  sysstat.pot  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
tests/: 00010  00011  00012  00020  00021  00022  00023  00024  00025  00026  00027  00030  00050  00052  00054  00055  00057  00060  00062  00065  00067  00068  00069  00070  00072  00074  00076  00080  00090  001  00100  00105  00110  00120  00130  00131  00132  00134  00136  00137  (+1062 more)
tests/12.0.1/: common.c  common.h  count.c  format.c  inisar.c  inisysconfig.h  iniversion.h  ioconf.c  ioconf.h  pr_stats.h  sa_common.c
tests/32bits/: README
tests/extra/: 0010  0100  0110  0115  0200  XTLIST  expected.pcpar  expected.vmstat-pgsteal
tests/root1/dev/: dm-2  sdb
tests/root1/dev/disk/by-id/: ata-Hitachi_HDS723020BLA642_MN1240F33J1XND-part7  wwn-0x5000cca369f193ac-part1  wwn-0x5000cca369f193ac-part11
tests/root1/dev/mapper/: virtualhd
tests/root1/etc/: mtab
tests/root1/my_stats/block/: _list
tests/root1/my_stats/block/sda/: _list
tests/root1/my_stats/dev/block/: 8:1  8:10  8:13  8:48  8:80
tests/root1/proc/: _list  cpuinfo  diskstats  interrupts  softirqs  stat  uptime  vmstat
tests/root1/proc/21342/: io
tests/root1/proc/21342/task/: _list
tests/root1/proc/8407/: cmdline  io  schedstat  stat
tests/root1/proc/8741/: io  schedstat  stat
tests/root1/proc/8741/fd/: 2
tests/root1/proc/8741/task/: _list
tests/root1/proc/9009/: cmdline  io  schedstat  stat
tests/root1/proc/fs/cifs/: Stats
tests/root1/proc/net/: dev  sockstat  softnet_stat
tests/root1/proc/pressure/: cpu  io
tests/root1/sys/block/: _list
tests/root1/sys/block/sda/: stat
tests/root1/sys/block/sdb/: _list
tests/root1/sys/block/sdc/: _list
tests/root1/sys/block/sdq/: stat
tests/root1/sys/block/sdr/: stat
tests/root1/sys/block/sds/: stat
tests/root2/: root1  root2
tests/root2/dev/: sda1
tests/root2/etc/: mtab
tests/root2/my_stats/block/: _list
tests/root2/proc/: _list  diskstats  interrupts  softirqs  stat  vmstat
tests/root2/proc/7900/: io  schedstat  stat  status
tests/root2/proc/8407/: io  schedstat  stat  status
tests/root2/proc/8741/: io  schedstat  stat  status
tests/root2/proc/9009/: io  stat
tests/root2/proc/net/: dev  snmp6
tests/root2/proc/pressure/: cpu  io  memory
tests/root3/dev/: sda12
tests/root3/proc/: _list  diskstats  interrupts  meminfo  softirqs  stat  uptime  vmstat
tests/root3/proc/7900/: io  stat  status
tests/root3/proc/8407/: io  schedstat  stat  status
tests/root3/proc/net/: dev
tests/root3/proc/pressure/: cpu  io  memory
tests/root3/sys/block/: _list
tests/root4/etc/: mtab
tests/root4/proc/: devices  diskstats  interrupts  softirqs  stat  uptime  vmstat
tests/root4/proc/7900/: cmdline  io  schedstat  stat  status
tests/root4/proc/8407/: io  schedstat  stat  status
tests/root4/proc/8741/: schedstat  stat
tests/root4/proc/9009/: io  stat
tests/root4/proc/net/: dev  softnet_stat
tests/root4/proc/pressure/: cpu  io  memory
tests/root4/sys/block/: _list
tests/root5/dev/: sda  sda5  sda6  sdc  sdd  sdf  sdg
tests/root5/etc/: mtab
tests/root5/proc/: diskstats  interrupts  loadavg  softirqs  stat  uptime  vmstat
tests/root5/proc/21342/: schedstat  stat
tests/root5/proc/7900/: io  schedstat  smaps  stat  status
tests/root5/proc/8407/: io  schedstat  stat
tests/root5/proc/9009/: io  schedstat  stat
tests/root5/proc/net/: dev  snmp  softnet_stat
tests/root5/proc/pressure/: cpu  io  memory
tests/root5/sys/block/: _list
tests/root6/dev/: sde
tests/root6/dev/cciss/: c0d0
tests/root6/proc/: _list  cpuinfo  diskstats  interrupts  softirqs  stat  vmstat
tests/root6/proc/8407/: io  stat  status
tests/root6/proc/net/: dev  sockstat6  softnet_stat
tests/root6/sys/block/: _list
tests/root6b/proc/: diskstats  interrupts  stat  uptime
tests/root6b/proc/net/: dev
tests/root7/dev/: sda2  sda3  sr0  xvdp  xvdq
tests/root7/dev/cciss/: c0d0p1  c0d0p2
tests/root7/proc/: devices  diskstats  interrupts  softirqs  stat  uptime  vmstat
tests/root7/proc/8407/: io  stat  status
tests/root7/proc/8741/: io
tests/root7/proc/net/: dev  softnet_stat
tests/root7/sys/block/: _list
xml/: sysstat-2.15.dtd  sysstat-2.16.dtd  sysstat-2.17.dtd  sysstat-2.18.dtd  sysstat-2.19.dtd  sysstat-3.0.dtd  sysstat-3.10.dtd  sysstat-3.11.dtd  sysstat-3.12.dtd  sysstat-3.13.dtd  sysstat-3.14.dtd  sysstat-3.15.dtd  sysstat-3.16.dtd  sysstat-3.17.dtd  sysstat-3.18.dtd  sysstat-3.2.dtd  sysstat-3.3.dtd  sysstat-3.4.dtd  sysstat-3.5.dtd  sysstat-3.6.dtd  sysstat-3.7.dtd  sysstat-3.8.dtd  sysstat-3.9.dtd  sysstat.dtd  sysstat.xsd
(+321 files in other folders)
